dataset1235/2025-2/610742602/users/2183191739/executions/677928262_3921830315.log
== SUBMISSION (2025-08-22 15:03:01)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b*(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
qual a quantidade de litros abastecidos?: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
qual a quantidade de litros abastecidos?: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
qual a quantidade de litros abastecidos?: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
qual a quantidade de litros abastecidos?: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
qual a quantidade de litros abastecidos?: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
qual a quantidade de litros abastecidos?: 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:46)
-- CODE: 
a= floar(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b*(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:52)
-- CODE: 
a= float(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b*(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
qual a quantidade de litros abastecidos?: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
qual a quantidade de litros abastecidos?: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
qual a quantidade de litros abastecidos?: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
qual a quantidade de litros abastecidos?: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
qual a quantidade de litros abastecidos?: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
qual a quantidade de litros abastecidos?: 230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:44)
-- CODE: 
a= floar(input("qual a quantidade de litros abastecidos?: "))
b= 2.86*a + 50
c= b+b*(34/100)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= floar(input("qual a quantidade de litros abastecidos?: "))
       ^^^^^
NameError: name 'floar' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
